# air-hockey

./: .gitignore  CMakeLists.txt  LICENSE
assets/shaders/: gl_circle.frag  gl_circle.vert  gl_ice.frag  gl_ice.vert  gl_line.frag  gl_line.vert
src/: main.cpp
src/app/: Application.cpp  Application.h
src/controllers/: AIPaddleController.cpp  AIPaddleController.h  IPlayerController.h
src/core/: Game.cpp  Game.h  GameEvent.h  Input.h  MatchState.cpp  MatchState.h  Time.cpp  Time.h
src/math/: Math.h  Vec2.h
src/physics/: PhysicsWorld.cpp  PhysicsWorld.h
src/platform/: DesktopFactory.h  GlfwWindow.cpp  GlfwWindow.h  IWindow.h  PlatformFactory.h  Window.h
src/render/: IRenderer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/world/: Paddle.h  Puck.h  Rink.h  World.h
